# aua-app/src/_assets/api.yml
@@ -282,6 +282,20 @@ paths:
       responses:
         200:
           description: OK
+  /doc_template/{id}/use:
+    post:
+      operationId: useDocTemplate
+      # security:
+      #   - authLoggedInUser: []
+      parameters:
+        - name: id
+          in: path
+          type: string
+          format: uuid
+          required: true
+      responses:
+        200:
+          description: OK
     delete:
       operationId: deleteDocTemplate
       # security:
